--- a/custom/cloudjt/pom.xml
+++ b/custom/cloudjt/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>luffy-parent</artifactId>
-        <version>1.0.7</version>
+        <version>1.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -58,43 +58,43 @@
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>luffy</artifactId>
-            <version>${luffy.ver}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- SolonJT freemarker 模板引擎 -->
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>luffy.executor.m.freemarker</artifactId>
-            <version>${luffy.ver}</version>
+            <version>${project.version}</version>
         </dependency>
         <!-- SolonJT javascript 脚本引擎 -->
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>luffy.executor.s.javascript</artifactId>
-            <version>${luffy.ver}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>luffy.event.schedule</artifactId>
-            <version>${luffy.ver}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>luffy.event.message</artifactId>
-            <version>${luffy.ver}</version>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>usopp.extend.jsoup</artifactId>
-            <version>${luffy.ver}</version>
+            <version>${project.version}</version>
         </dependency>
 
 <!--        <dependency>-->
 <!--            <groupId>org.noear</groupId>-->
 <!--            <artifactId>usopp.extend.flexmark</artifactId>-->
-<!--            <version>${luffy.ver}</version>-->
+<!--            <version>${project.version}</version>-->
 <!--        </dependency>-->
 
         <dependency>
