--- a/custom/cloudjt/pom.xml
+++ b/custom/cloudjt/pom.xml
@@ -87,7 +87,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>usopp.extend.jsoup</artifactId>
+            <artifactId>luffy.trick.extend.jsoup</artifactId>
             <version>${project.version}</version>
         </dependency>
 
