--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -18,7 +18,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <solon.ver>1.2.17</solon.ver>
+        <solon.ver>1.2.18</solon.ver>
 
         <weed3.ver>3.2.28</weed3.ver>
         <snack3.ver>3.1.13</snack3.ver>
@@ -188,15 +188,16 @@
                 <version>3.7.0</version>
                 <configuration>
                     <compilerArgument>-parameters</compilerArgument>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.3.0</version>
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
