--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -18,9 +18,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <solon.ver>1.3.4</solon.ver>
+        <solon.ver>1.3.5</solon.ver>
 
-        <weed3.ver>3.2.35</weed3.ver>
+        <weed3.ver>3.3.0</weed3.ver>
         <snack3.ver>3.1.14</snack3.ver>
 
         <okhttp.ver>3.14.8</okhttp.ver>
@@ -178,7 +178,7 @@
                         <configuration>
                             <serverId>oss</serverId>
                             <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                         </configuration>
                     </plugin>
                 </plugins>
