--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
         <module>luffy-parent</module>
 
+        <module>luffy.test</module>
+
         <module>custom/luffy.cap.extend.sited</module>
         <module>custom/luffy.cap.extend.mock</module>
         <module>custom/cloudjt</module>
