--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.noear</groupId>
     <artifactId>luffy-parent</artifactId>
-    <version>1.0.3</version>
+    <version>1.0.4</version>
     <packaging>pom</packaging>
 
     <name>luffy-parent</name>
@@ -18,8 +18,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <solon.ver>1.3.17</solon.ver>
-        <weed3.ver>3.3.5</weed3.ver>
+        <solon.ver>1.3.20</solon.ver>
+        <weed3.ver>3.3.6</weed3.ver>
         <snack3.ver>3.1.14</snack3.ver>
 
         <okhttp.ver>3.14.8</okhttp.ver>
@@ -243,12 +243,12 @@
                     <id>nexus-internal</id>
                     <name>releases</name>
                     <layout>default</layout>
-                    <url>http://internal.meven:8081/repository/maven-snapshots/</url>
+                    <url>http://maven.digital.js/repository/maven-snapshots/</url>
                 </snapshotRepository>
                 <repository>
                     <id>nexus-internal</id>
                     <name>snapshots</name>
-                    <url>http://internal.meven:8081/repository/maven-releases/</url>
+                    <url>http://maven.digital.js/repository/maven-releases/</url>
                 </repository>
             </distributionManagement>
         </profile>
