--- a/custom/cloudjt/pom.xml
+++ b/custom/cloudjt/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>luffy-parent</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6</version>
         <relativePath>../../luffy-parent/pom.xml</relativePath>
     </parent>
 
@@ -38,7 +38,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.jetty</artifactId>
+            <artifactId>solon.boot.smarthttp</artifactId>
             <version>${solon.ver}</version>
         </dependency>
 
