--- a/custom/luffy.cap.extend.diff/pom.xml
+++ b/custom/luffy.cap.extend.diff/pom.xml
@@ -55,7 +55,9 @@
             </plugin>
 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
                 <configuration>
                     <finalName>${project.artifactId}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
