--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.noear</groupId>
     <artifactId>luffy_java</artifactId>
-    <version>1.1.0</version>
+    <version>dev</version>
     <packaging>pom</packaging>
 
     <name>_root</name>
