--- a/luffy.base/pom.xml
+++ b/luffy.base/pom.xml
@@ -40,9 +40,17 @@
             <artifactId>HikariCP</artifactId>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
 
