--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.noear</groupId>
     <artifactId>luffy-parent</artifactId>
-    <version>1.1.5</version>
+    <version>1.1.6</version>
     <packaging>pom</packaging>
 
     <name>luffy-parent</name>
@@ -23,6 +23,8 @@
         <snack3.ver>3.1.18</snack3.ver>
 
         <okhttp.ver>3.14.9</okhttp.ver>
+
+        <okldap.ver>1.0</okldap.ver>
 
         <flexmark.version>0.34.48</flexmark.version>
     </properties>
