--- a/luffy.base/pom.xml
+++ b/luffy.base/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>luffy-parent</artifactId>
-        <version>1.1.5</version>
+        <version>1.1.6</version>
         <relativePath>../luffy-parent/pom.xml</relativePath>
     </parent>
 
@@ -15,6 +15,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>okldap</artifactId>
+            <version>${okldap.ver}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>solon</artifactId>
