--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.noear</groupId>
     <artifactId>luffy-parent</artifactId>
-    <version>1.1.8</version>
+    <version>1.1.9</version>
     <packaging>pom</packaging>
 
     <name>luffy-parent</name>
@@ -18,8 +18,8 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <solon.ver>1.5.37</solon.ver>
-        <weed3.ver>3.3.22</weed3.ver>
+        <solon.ver>1.5.41</solon.ver>
+        <weed3.ver>3.3.24</weed3.ver>
         <snack3.ver>3.1.20</snack3.ver>
 
         <okhttp.ver>3.14.9</okhttp.ver>
@@ -57,6 +57,12 @@
             <dependency>
                 <groupId>org.noear</groupId>
                 <artifactId>solon</artifactId>
+                <version>${solon.ver}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.noear</groupId>
+                <artifactId>solon-test</artifactId>
                 <version>${solon.ver}</version>
             </dependency>
 
@@ -315,6 +321,7 @@
         <module>../custom/luffy.cap.extend.jsoup</module>
         <module>../custom/luffy.cap.extend.hanlp</module>
         <module>../custom/luffy.cap.extend.diff</module>
+        <module>../custom/luffy.cap.extend.excel</module>
 
     </modules>
 
