--- a/luffy.lock.redis/pom.xml
+++ b/luffy.lock.redis/pom.xml
@@ -29,8 +29,8 @@
         </dependency>
 
         <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
+            <groupId>org.noear</groupId>
+            <artifactId>redisx</artifactId>
         </dependency>
     </dependencies>
 
