--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 #镜像说明:
-#单机版：noearorg/luffy-jtl ，使用h2嵌入式数据库
+#单机版：noearorg/luffy-jtl ，使用h2嵌入式数据库（不需初始化环境）
 #集群版：noearorg/luffy-jtc ，使用mysql8数据库
 
 services:
