--- a/luffy-jtl/src/main/resources/app.yml
+++ b/luffy-jtl/src/main/resources/app.yml
@@ -1,6 +1,6 @@
 server.port: 19819
-
 solon.output.meta: 1
+#solon.extend: luffy_ext #内部处理
 
 luffy.center: "http://jtx.noear.org"
 luffy.node: "localjt"
