--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>luffy-parent</artifactId>
-        <version>1.1.12</version>
+        <version>1.1.13</version>
         <relativePath>../luffy-parent/pom.xml</relativePath>
     </parent>
 
@@ -100,8 +100,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <version>${h2.ver}</version>
         </dependency>
 
     </dependencies>
