--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -100,7 +100,8 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>${h2.ver}</version>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
