--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -100,7 +100,7 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>RELEASE</version>
+            <version>1.4.200</version>
             <scope>compile</scope>
         </dependency>
 
