--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -22,6 +22,8 @@
         <weed3.ver>3.4.20</weed3.ver>
         <snack3.ver>3.2.18</snack3.ver>
 
+        <redisx.ver>1.3.7</redisx.ver>
+
         <okhttp.ver>3.14.9</okhttp.ver>
 
         <okldap.ver>1.1</okldap.ver>
@@ -95,7 +97,7 @@
             <dependency>
                 <groupId>org.noear</groupId>
                 <artifactId>redisx</artifactId>
-                <version>1.1</version>
+                <version>${redisx.ver}</version>
             </dependency>
 
             <!-- Http 框架 -->
