--- a/luffy-jtc/src/main/resources/app.yml
+++ b/luffy-jtc/src/main/resources/app.yml
@@ -1,3 +1,8 @@
+server.port: 8080
+
+server.request.maxBodySize: 200mb #kb,mb
+server.request.maxFileSize: 200mb #kb,mb (默认使用 maxBodySize 配置值)
+
 solon.output.meta: 1
 
 luffy.executor.default: freemarker
