--- a/luffy-jtc/pom.xml
+++ b/luffy-jtc/pom.xml
@@ -38,7 +38,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.jlhttp</artifactId>
+            <artifactId>solon.boot.undertow</artifactId>
             <version>${solon.ver}</version>
         </dependency>
 
