--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.noear</groupId>
     <artifactId>luffy-parent</artifactId>
-    <version>1.3.0</version>
+    <version>1.3.1</version>
     <packaging>pom</packaging>
 
     <name>luffy-parent</name>
@@ -18,9 +18,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <solon.ver>1.8.0</solon.ver>
-        <weed3.ver>3.4.25</weed3.ver>
-        <snack3.ver>3.2.24</snack3.ver>
+        <solon.ver>1.9.0</solon.ver>
+        <weed3.ver>3.4.27</weed3.ver>
+        <snack3.ver>3.2.29</snack3.ver>
 
         <redisx.ver>1.4.3</redisx.ver>
 
@@ -69,7 +69,7 @@
 
             <dependency>
                 <groupId>org.noear</groupId>
-                <artifactId>solon.extend.properties.yaml</artifactId>
+                <artifactId>solon.config.yaml</artifactId>
                 <version>${solon.ver}</version>
             </dependency>
 
