--- a/luffy.test/pom.xml
+++ b/luffy.test/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>luffy-parent</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.1</version>
         <relativePath>../luffy-parent/pom.xml</relativePath>
     </parent>
 
@@ -27,7 +27,7 @@
         </dependency>
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.extend.properties.yaml</artifactId>
+            <artifactId>solon.config.yaml</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
