--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>luffy-parent</artifactId>
-        <version>1.3.1</version>
+        <version>1.3.2</version>
         <relativePath>../luffy-parent/pom.xml</relativePath>
     </parent>
 
@@ -38,7 +38,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.jdkhttp</artifactId>
+            <artifactId>solon.boot.jlhttp</artifactId>
             <version>${solon.ver}</version>
         </dependency>
 
