--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -44,6 +44,12 @@
 
         <dependency>
             <groupId>org.noear</groupId>
+            <artifactId>solon.web.staticfiles</artifactId>
+            <version>${solon.ver}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.noear</groupId>
             <artifactId>solon.config.yaml</artifactId>
             <version>${solon.ver}</version>
         </dependency>
