--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.noear</groupId>
     <artifactId>luffy-parent</artifactId>
-    <version>1.3.2</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <name>luffy-parent</name>
@@ -14,6 +14,8 @@
     <url>https://github.com/noear/luffy</url>
 
     <properties>
+        <revision>1.3.3</revision>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
