--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -21,7 +21,7 @@
         <java.version>1.8</java.version>
 
         <solon.ver>1.10.1</solon.ver>
-        <weed3.ver>3.4.27</weed3.ver>
+        <weed3.ver>3.4.29</weed3.ver>
         <snack3.ver>3.2.34</snack3.ver>
 
         <redisx.ver>1.4.3</redisx.ver>
@@ -290,6 +290,33 @@
                         <descriptorRef>jar-with-dependencies</descriptorRef>
                     </descriptorRefs>
                 </configuration>
+            </plugin>
+
+            <!-- 版本号管理 -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>1.2.7</version>
+                <configuration>
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
         </plugins>
