--- a/luffy.event.message/pom.xml
+++ b/luffy.event.message/pom.xml
@@ -22,7 +22,7 @@
         </dependency>
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>weed3</artifactId>
+            <artifactId>wood</artifactId>
             <scope>provided</scope>
         </dependency>
 
