--- a/luffy-jtc/pom.xml
+++ b/luffy-jtc/pom.xml
@@ -27,7 +27,7 @@
         <!-- ORM 框架 -->
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>weed3</artifactId>
+            <artifactId>wood</artifactId>
         </dependency>
 
         <!-- JSON 框架 -->
@@ -97,11 +97,6 @@
             <version>${project.version}</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.noear</groupId>-->
-<!--            <artifactId>usopp.extend.flexmark</artifactId>-->
-<!--            <version>${project.version}</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.slf4j</groupId>
