--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -27,7 +27,7 @@
         <!-- ORM 框架 -->
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>weed3</artifactId>
+            <artifactId>wood</artifactId>
         </dependency>
 
         <!-- JSON 框架 -->
@@ -109,6 +109,12 @@
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.49</version>
         </dependency>
 
     </dependencies>
