--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -14,17 +14,18 @@
     <url>https://github.com/noear/luffy</url>
 
     <properties>
-        <revision>1.3.4</revision>
+        <revision>1.3.5</revision>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
 
-        <solon.ver>1.10.1</solon.ver>
-        <weed3.ver>3.4.29</weed3.ver>
-        <snack3.ver>3.2.34</snack3.ver>
+        <solon.ver>1.10.7</solon.ver>
+        <wood.ver>1.0.0</wood.ver>
+        <snack3.ver>3.2.44</snack3.ver>
 
-        <redisx.ver>1.4.3</redisx.ver>
+        <mongox.ver>1.0.0</mongox.ver>
+        <redisx.ver>1.4.4</redisx.ver>
 
         <okhttp.ver>3.14.9</okhttp.ver>
 
@@ -85,8 +86,8 @@
             <!-- ORM 框架 -->
             <dependency>
                 <groupId>org.noear</groupId>
-                <artifactId>weed3</artifactId>
-                <version>${weed3.ver}</version>
+                <artifactId>wood</artifactId>
+                <version>${wood.ver}</version>
             </dependency>
 
             <!-- JSON 框架 -->
@@ -94,6 +95,12 @@
                 <groupId>org.noear</groupId>
                 <artifactId>snack3</artifactId>
                 <version>${snack3.ver}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.noear</groupId>
+                <artifactId>mongox</artifactId>
+                <version>${mongox.ver}</version>
             </dependency>
 
             <dependency>
