--- a/luffy.base/pom.xml
+++ b/luffy.base/pom.xml
@@ -33,9 +33,15 @@
         </dependency>
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>weed3</artifactId>
+            <artifactId>wood</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>mongox</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>snack3</artifactId>
