--- a/luffy.executor.m.bsql/pom.xml
+++ b/luffy.executor.m.bsql/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>weed3</artifactId>
+            <artifactId>wood</artifactId>
             <scope>provided</scope>
         </dependency>
 
