--- a/luffy/pom.xml
+++ b/luffy/pom.xml
@@ -29,7 +29,7 @@
         <!-- ORM 框架 -->
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>weed3</artifactId>
+            <artifactId>wood</artifactId>
             <scope>provided</scope>
         </dependency>
         <!-- JSON 框架 -->
