--- a/luffy-jtc/pom.xml
+++ b/luffy-jtc/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>wood</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.noear</groupId>
+            <artifactId>mongox</artifactId>
+        </dependency>
+
         <!-- JSON 框架 -->
         <dependency>
             <groupId>org.noear</groupId>
