--- a/luffy-jtc/pom.xml
+++ b/luffy-jtc/pom.xml
@@ -113,7 +113,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.49</version>
+            <version>${mysql.ver}</version>
         </dependency>
 
     </dependencies>
