--- a/luffy-jtl/pom.xml
+++ b/luffy-jtl/pom.xml
@@ -107,14 +107,14 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.200</version>
+            <version>${h2.ver}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.49</version>
+            <version>${mysql.ver}</version>
         </dependency>
 
     </dependencies>
