--- a/luffy.base/pom.xml
+++ b/luffy.base/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.noear</groupId>
             <artifactId>okldap</artifactId>
-            <version>${okldap.ver}</version>
+            <version>${okldap.version}</version>
         </dependency>
 
         <dependency>
