--- a/luffy-jtc/pom.xml
+++ b/luffy-jtc/pom.xml
@@ -38,7 +38,7 @@
 
         <dependency>
             <groupId>org.noear</groupId>
-            <artifactId>solon.boot.smarthttp</artifactId>
+            <artifactId>solon.boot.jlhttp</artifactId>
             <version>${solon.version}</version>
         </dependency>
 
@@ -126,7 +126,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
                 <configuration>
                     <compilerArgument>-parameters</compilerArgument>
                     <source>1.8</source>
@@ -138,7 +137,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.3.0</version>
                 <configuration>
                     <finalName>${project.name}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
