--- a/luffy-parent/pom.xml
+++ b/luffy-parent/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.noear</groupId>
         <artifactId>solon-parent</artifactId>
-        <version>2.6.0</version>
+        <version>2.6.2</version>
         <relativePath />
     </parent>
 
@@ -21,7 +21,7 @@
     <url>https://github.com/noear/luffy</url>
 
     <properties>
-        <revision>1.7.0</revision>
+        <revision>1.7.1</revision>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -89,6 +89,12 @@
                 <groupId>org.noear</groupId>
                 <artifactId>luffy.base</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
             </dependency>
 
 
