--- a/luffy.lock.redis/pom.xml
+++ b/luffy.lock.redis/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>luffy.lock.redis</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
 
     <dependencies>
         <dependency>
