--- a/custom/luffy.cap.extend.mock/pom.xml
+++ b/custom/luffy.cap.extend.mock/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.cap.extend.mock</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>org.noear</groupId>
