--- a/luffy.event.schedule/pom.xml
+++ b/luffy.event.schedule/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.event.schedule</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
 
         <dependency>
