--- a/luffy.executor.m.beetl/pom.xml
+++ b/luffy.executor.m.beetl/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.executor.m.beetl</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>com.ibeetl</groupId>
