--- a/luffy.executor.m.enjoy/pom.xml
+++ b/luffy.executor.m.enjoy/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.executor.m.enjoy</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>com.jfinal</groupId>
