--- a/luffy.executor.m.freemarker/pom.xml
+++ b/luffy.executor.m.freemarker/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.executor.m.freemarker</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>org.freemarker</groupId>
