--- a/luffy.executor.m.velocity/pom.xml
+++ b/luffy.executor.m.velocity/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.executor.m.velocity</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.velocity</groupId>
