--- a/luffy.executor.s.javascript/pom.xml
+++ b/luffy.executor.s.javascript/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>luffy.executor.s.javascript</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
 
     <dependencies>
         <dependency>
