--- a/luffy.executor.s.lua/pom.xml
+++ b/luffy.executor.s.lua/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.executor.s.lua</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>org.luaj</groupId>
