--- a/luffy.executor.s.python/pom.xml
+++ b/luffy.executor.s.python/pom.xml
@@ -14,6 +14,8 @@
     <artifactId>luffy.executor.s.python</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
+
     <dependencies>
         <dependency>
             <groupId>org.python</groupId>
