--- a/luffy/pom.xml
+++ b/luffy/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>luffy</artifactId>
     <packaging>jar</packaging>
 
+    <name>${project.artifactId}</name>
 
     <dependencies>
         <dependency>
